--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "google-spreadsheet": "^3.2.0",
+    "react-ckeditor-component": "^1.1.0",
     "lodash": "^4.17.21",
     "pressed": "^1.3.1",
     "react": "^17.0.1",
